Rejected commit: Default

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,17 @@
     <string name="close">关闭</string>
     <string name="classify">主题章节</string>
     <string name="about">关于Red</string>
-    <string name="a1">本项目已开源</string>
+
+    <string name="s1">本项目已开源 Git地址 : \n https://github.com/dom4j1/Red</string>
+    <string name="s2">特别感谢izzyleung开源的接口 Git地址 : \n https://github.com/izzyleung</string>
+    <string name="s3">Red由dom4j完成 是学习mvp + rxjava2.0 + retrofit2.0 + dagger2 的产物 是一款纯阅读的App 欢迎来Git提Issues</string>
+    <string name="s4">Red所有 API 均由 知乎（Zhihu.Inc） 提供，采取非正常手段获取。获取与共享之行为或有侵犯知乎权益的嫌疑。若被告知需停止共享与使用，本人会及时删除此页面与整个项目。</string>
+    <string name="s5">邮箱 : dom4j1464529456@163.com</string>
+    <string name="s6">QQ : 1464529456</string>
+
+    <string name="c1">https://github.com/dom4j1/Red</string>
+    <string name="c2">https://github.com/izzyleung</string>
+    <string name="c3">mvp + rxjava2.0 + retrofit2.0 + dagger2</string>
+    <string name="c4">dom4j1464529456@163.com</string>
+    <string name="c5">1464529456</string>
 </resources>
