--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="c3">mvp + rxjava2.0 + retrofit2.0 + dagger2</string>
     <string name="c4">dom4j1464529456@163.com</string>
     <string name="c5">1464529456</string>
-    <string name="share_app">发现了一款纯阅读的小app「J.Red」,  同时有很多程序员干货哦，^_^ Git地址: https://github.com/dom4j1/Red  喜欢可以帮忙点颗星呦</string>
+    <string name="share_app">发现了一款纯阅读的小app「J.Red」,  同时有很多程序员干货哦，^_^ 下载地址:  https://fir.im/Red</string>
     <string name="share_app_to_friend">分享「Red」给朋友</string>
     <string name="share_essay">我在Red 发现了一篇新闻 很有意思呦 你也来看看 \n </string>
     <string name="share_essay_to_friend">分享「新闻」给朋友</string>
